--- a/styles.css
+++ b/styles.css
@@ -55,11 +55,11 @@ background-position: center;
     cursor: pointer;
 }
 .image img{
-    
-    width: 350vh;
-    max-width: 50vh;
-   object-fit: cover;
-   padding: 20px 30px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%; /* Redimensionne l'image pour s'adapter à la largeur de l'écran */
+    height: auto;
     
 }
 .Get{
