--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,8 @@ section{
 .retail{
     background: rgba(95, 158, 160, 0.6);
     height: 70vh;
-    padding: 20px 30px;  
+    padding: 20px 30px; 
+    margin-bottom: 30px; 
     
 }
 .retail p{
@@ -210,5 +211,9 @@ footer{
     }
     .Get{
         padding: 25px 30px;
+    }
+     .retail{
+        height:auto;
+     
     }
 }
